# m3terscan-api

./: .gitignore  Dockerfile  README.md  app.db  database.py  main.py  pyproject.toml
cmd/server/: main.go
config/: eth_rpc.py  graphql.py  valkey.py  valkey_client.py
contracts/: loader.py
contracts/abis/: Rollup.json
handlers/: daily.py
internal/api/: commit_state.go  current-week.go  schema.sql
internal/models/: response.go
migrations/: env.py
migrations/versions/: 46b1c3685235_added_unique_constraint_meter_id_for_.py  92bea9ad84bf_initial_migration.py
models/: monthly.py  output.py  weeks_of_year.py
orm/: load_db.py  query.sql
routes/: m3ter.py  meter.py  proposal.py
schemas/: monthly.py  weeks_of_year.py
utils/: helpers.py  latest_block.py  subgraph.py
